# oxDNA

./: .gitignore  BUILD_METAL.md  CMakeLists.txt  INFO.md  Map.md  README.md  comparison.md  select_compute_arch.cmake
.github/workflows/: ci.yml
CPU_EXAMPLE/: input  shaders.metallib
Metal_EXAMPLE/: cpu_energies.txt  cpu_full_log.txt  input  input_cpu  metal_energies.txt  metal_energies_final.txt  metal_energies_stacking_final_debug_buffers.txt  metal_energies_stacking_final_mass_fix.txt  metal_energies_stacking_final_success.txt  metal_energies_stacking_final_success_check.txt  metal_energies_v2.txt  metal_energies_v4.txt  metal_energies_v6.txt  metal_full_log.txt  shaders.metallib
build_metal/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_metal/contrib/: cmake_install.cmake
build_metal/oxpy/: cmake_install.cmake
build_metal/src/: cmake_install.cmake
comparison_run/: input.cpu  input.metal  input_gen  run_comparison.py  validate_metal_forcefields.py
oxpy/: python_defs.h
src/: CMakeLists.txt  defs.h
src/Backends/: BackendFactory.cpp  BackendFactory.h  FFS_MD_CPUBackend.cpp  MDBackend.cpp  MD_CPUBackend.cpp
src/Backends/Thermostats/: BrownianThermostat.cpp  LangevinThermostat.cpp  RefreshThermostat.cpp
src/CUDA/: CUDAForces.h
src/CUDA/Backends/: CUDA_MD.cuh  CUDA_mixed.cuh  MD_CUDABackend.cu  MD_CUDABackend.h  MD_CUDAMixedBackend.cu
src/CUDA/Interactions/: CUDABaseInteraction.cu  CUDAInteractionFactory.cu  CUDAPHBInteraction.cu  CUDAPHBInteraction.h  CUDAPSP2Interaction.cu  CUDAPSP2Interaction.h  CUDA_DNA.cuh  CUDA_DNANM.cuh  CUDA_RNA.cuh
src/CUDA/Thermostats/: CUDABaseThermostat.h  CUDABrownianThermostat.cu  CUDABrownianThermostat.h  CUDABussiThermostat.cu  CUDABussiThermostat.h  CUDALangevinThermostat.cu  CUDALangevinThermostat.h  CUDANoThermostat.cu  CUDANoThermostat.h  CUDASRDThermostat.cu  CUDASRDThermostat.h
src/CUDA/cuda_utils/: CUDA_lr_common.cuh
src/Forces/: ForceFactory.cpp
src/Interactions/: DNAInteraction.cpp  InteractionFactory.cpp  PHBInteraction.cpp  PHBInteraction.h  PSP2Interaction.cpp  PSP2Interaction.h
src/Metal/: CMakeLists.txt  MetalBackendFactory.mm  MetalUtils.h  MetalUtils.mm  README.md  metal_defs.h
src/Metal/Backends/: MD_MetalBackend.h  MD_MetalBackend.mm  MetalBaseBackend.h  MetalBaseBackend.mm
src/Metal/Interactions/: MetalBaseInteraction.h  MetalBaseInteraction.mm  MetalCPUForceFallback.h  MetalCPUForceFallback.mm  MetalDNAInteraction.h  MetalDNAInteraction.mm  MetalInteractionFactory.h  MetalInteractionFactory.mm  MetalLJInteraction.h  MetalLJInteraction.mm  MetalPatchyInteraction.h  MetalPatchyInteraction.mm  MetalRNAInteraction.h  MetalRNAInteraction.mm  MetalTEPInteraction.h  MetalTEPInteraction.mm
src/Metal/Lists/: MetalBaseList.h  MetalListFactory.h  MetalListFactory.mm  MetalNoList.h  MetalNoList.mm  MetalSimpleVerletList.h  MetalSimpleVerletList.mm
src/Metal/Shaders/: common.metal  dna_kernels.metal  list_kernels.metal  md_kernels.metal  shader_utils.h  thermostat_kernels.metal
src/Metal/Thermostats/: MetalBaseThermostat.h  MetalBaseThermostat.mm  MetalBrownianThermostat.h  MetalBrownianThermostat.mm  MetalThermostatFactory.h  MetalThermostatFactory.mm
src/Metal/metal_utils/: MetalBox.h
src/Observables/: KineticEnergy.cpp
src/Particles/: BaseParticle.cpp  PSP2Particle.cpp  PSP2Particle.h
src/ROCM/: CUDAForces.h  CUDAUtils.cu  CUDAUtils.h  CUDA_sort.cu  CUDA_sort.cuh  cuda_defs.h  curand_kernel.h
src/ROCM/Backends/: CUDABaseBackend.cu  CUDABaseBackend.h  CUDA_MD.cuh  CUDA_mixed.cuh  FFS_CUDA_MD.cuh  FFS_MD_CUDAMixedBackend.cu  MD_CUDABackend.cu  MD_CUDABackend.h  MD_CUDAMixedBackend.cu  MD_CUDAMixedBackend.h
src/ROCM/Interactions/: CUDABaseInteraction.cu  CUDADNA3Interaction.cu  CUDADNAInteraction.cu  CUDADNANMInteraction.cu  CUDALJInteraction.cu  CUDAPatchyInteraction.cu  CUDARNAInteraction.cu  CUDATEPInteraction.cu  CUDA_DNA.cuh  CUDA_DNA3.cuh  CUDA_DNANM.cuh  CUDA_LJ.cuh  CUDA_Patchy.cuh  CUDA_RNA.cuh
src/ROCM/Lists/: CUDABinVerletList.cu  CUDAListFactory.cu  CUDASimpleVerletList.cu  CUDASimpleVerletList.h  CUDA_bin_verlet.cuh  CUDA_simple_verlet.cuh
src/ROCM/Thermostats/: CUDABaseThermostat.cu  CUDABaseThermostat.h  CUDABrownianThermostat.cu  CUDABussiThermostat.cu  CUDALangevinThermostat.cu  CUDASRDThermostat.cu  CUDAThermostatFactory.cu  CUDA_SRD.cuh
src/ROCM/cuda_utils/: CUDABox.h  CUDA_lr_common.cuh  cuda_device_utils.cu  cuda_device_utils.h  helper_cuda.h
src/Utilities/: Timings.cpp
subho/: README.md  compare_single_frame_to_oat.py  energy.ign  example_torch_usage.py  generate_comparison_md.py  helix.phb  input2  inputGPU  last_conf.ign  log.ign  output_per_nucleotide_energy.py  oxdna2_pytorch.py  oxdna2_pytorch_readme.md  test_against_reference.py  test_oxdna2_pytorch.py  test_results.txt
subho/PHB/: 100q.phb  100s.phb  100sTest.phb  cuda.txt  helix.phb  helix2.phb  helixExtraLarge.phb  helixLarge.phb  helixPatch.phb  helixS100.phb  helixS1000.phb  helixSmall.phb  input  input2  inputGPU
subho/PSP2/: input  input.psp  inputGPU  output copy.psp  output.psp
subho/compat/: zstandard.py
subho/docs/: ENERGY_ANALYSIS_GUIDE.md  INDEX.md  output_bonds_explanation.md
test/: TestSuite.py  test_folder_list.txt
torch_dna2_energy/: ARCHITECTURE.md  CLASS_DIAGRAM.md  CMakeLists.txt  DESIGN_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  README.md  build.sh
torch_dna2_energy/examples/: automatic_differentiation.cpp  basic_energy_calculation.cpp  batch_processing.cpp  dna_sequences.cpp  example_usage.cpp  gpu_acceleration.cpp  interaction_types.cpp
torch_dna2_energy/include/: dna2_data_structures.h  dna2_energy_calculator.h  dna2_energy_pipeline.h  dna2_interactions.h  dna2_mathematical_functions.h  dna2_mesh_interpolation.h
torch_dna2_energy/src/: dna2_data_structures.cpp  dna2_mathematical_functions.cpp  dna2_mesh_interpolation.cpp
torch_dna2_energy/tests/: test_basic.cpp  test_mathematical_functions.cpp  test_mesh_interpolation.cpp  test_oxdna_validation.cpp  test_performance_benchmarks.cpp
(+33 files in other folders)
